# ocaml-todo

./: .env  Makefile  README.md  shell.nix
bin_chat_ws/: app.ml  app.mli  dune
bin_http/: dune  todo_http.ml
bin_server_http/: dune  handler.ml  handler.mli  log.ml  log.mli  request.ml  server.ml  server.mli  todo_server_http.ml
bin_server_ws/: app.ml  dune  endpoint.ml  endpoint.mli  handler.ml  handler.mli  param.ml  param.mli  response.ml  response.mli  server.ml  server.mli  status.ml  status.mli  todo_server_ws.ml
bin_ws/: dune
db/: sqitch.conf  sqitch.plan
db/deploy/: schema.sql  todos.sql
db/revert/: schema.sql  todos.sql
db/verify/: schema.sql  todos.sql
http/: dune
lib/: db.ml  db.mli  dune  model.ml
lib_base/: dune  log.ml  log.mli  metrics.ml  metrics.mli  print.ml  print.mli
lib_db/: config.ml  config.mli  dune  error.ml  error.mli  middleware.ml  middleware.mli  pool.ml  pool.mli  query.ml  query.mli  todo.ml  todo.mli  transaction.ml  transaction.mli  url.ml  url.mli
lib_http/: body.ml  body.mli  dune  endpoint.ml  endpoint.mli  log.ml  log.mli  middleware.ml  middleware.mli  param.ml  param.mli  response.ml  response.mli
lib_model/: dune  todo.ml  todo.mli
lib_ws/: client.ml  client.mli  dune  server.ml  server.mli
ws/: dune
